# ChangeLog for sys-block/tw_cli
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-block/tw_cli/ChangeLog,v 1.33 2010/11/15 22:02:51 robbat2 Exp $

*tw_cli-10.2 (15 Nov 2010)

  15 Nov 2010; Robin H. Johnson <robbat2@gentoo.org> +tw_cli-10.2.ebuild:
  Version bump. Change the RESTRICT=fetch to primaryuri, and let upstream
  count the downloads that way. Also update my test list as some of that
  hardware is long gone.

*tw_cli-10.1 (18 Jun 2010)

  18 Jun 2010; Robin H. Johnson <robbat2@gentoo.org> +tw_cli-10.1.ebuild:
  Bug #320295: version bump.

*tw_cli-9.5.3 (26 Dec 2009)

  26 Dec 2009; Robin H. Johnson <robbat2@gentoo.org> +tw_cli-9.5.3.ebuild:
  Version bump per bug #298188.

  23 Sep 2009; Patrick Lauer <patrick@gentoo.org> tw_cli-9.2.1.1.ebuild,
  tw_cli-9.3.0.2.ebuild, tw_cli-9.3.0.3.ebuild, tw_cli-9.3.0.4.ebuild,
  tw_cli-9.4.0.ebuild, tw_cli-9.4.0.1.ebuild, tw_cli-9.4.1.2.ebuild,
  tw_cli-9.4.2.ebuild, tw_cli-9.5.0.ebuild, tw_cli-9.5.0.1.ebuild,
  tw_cli-9.5.1.1.ebuild, tw_cli-9.5.2.ebuild:
  Remove virtual/libc

  05 Sep 2009; Robin H. Johnson <robbat2@gentoo.org> tw_cli-9.5.2.ebuild:
  Stabilizing, vouching for this myself, as I actively use it on my
  machines.

  09 Jun 2009; Robin H. Johnson <robbat2@gentoo.org> tw_cli-9.5.2.ebuild:
  As per bug 60690, comment 106
  (http://bugs.gentoo.org/show_bug.cgi?id=60690#c106), we do now have
  permission from upstream to redistribute the files. They would just like
  users to still see the message so that they could get a rough count.

*tw_cli-9.5.2 (09 Jun 2009)

  09 Jun 2009; Robin H. Johnson <robbat2@gentoo.org> +tw_cli-9.5.2.ebuild:
  Version bump per bug #272841.

*tw_cli-9.5.1.1 (12 Apr 2009)

  12 Apr 2009; Robin H. Johnson <robbat2@gentoo.org> +tw_cli-9.5.1.1.ebuild:
  Version bump per bug #261009.

*tw_cli-9.5.0.1 (12 Mar 2008)

  12 Mar 2008; Robin H. Johnson <robbat2@gentoo.org> +tw_cli-9.5.0.1.ebuild: