@@ -1,6 +1,9 @@
 # ChangeLog for sys-block/tw_cli
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-block/tw_cli/ChangeLog,v 1.33 2010/11/15 22:02:51 robbat2 Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-block/tw_cli/ChangeLog,v 1.34 2011/01/02 15:04:47 hwoarang Exp $
+
+  02 Jan 2011; Markos Chandras <hwoarang@gentoo.org> tw_cli-10.2.ebuild:
+  Stable on amd64 wrt bug #350218
 
 *tw_cli-10.2 (15 Nov 2010)
 
